# freertos-tinyusb-hid

./: .gitignore  CMakeLists.txt
include/: tusb_config.h
src/: main.c  usb_descriptors.c
